# cd-ex

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
core/: main.py  utils.py
core/markets/: marketdata.py
core/markets/cex/: binance.py
core/models/: ticker.py
src/: main.py
src/core/: models.py  utils.py
src/core/markets/: marketdata.py  models.py
src/core/markets/base/: connections.py  marketdata.py
src/core/markets/cex/: binance.py  bybit.py  coinbase.py
src/core/markets/utils/: orderbook.py  timestamp.py
