[project]
name = "cdex"
version = "0.1.0"
description = ""
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.13.1,<0.14.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "bandit (>=1.8.6,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

# Black
[tool.black]
line-length = 80
target-version = ["py312"]
skip-string-normalization = true

# Ruff
[tool.ruff]
line-length = 80
target-version = "py312"
fix = true
show-fixes = true
exclude = ["tests"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long, handled by black
    "B008",  # Do not perform function calls in argument defaults
    "C901",  # Too complex
    "W191",  # Indentation contains tabs
]

# mypy
[tool.mypy]
strict = true
disallow_untyped_defs = true

# Bandit
[tool.bandit]
exclude_dirs = ["tests"]
